back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back 
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: localhost:32000/mern-back:local
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 4000
