front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: localhost:32000/mern-front:local
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
